--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=
-APIKEY=
-OWNER=
+BOT_TOKEN=7137841250:AAELIDynta7SEVYPJYIAFHuEh-k0FM1Uwjk
+APIKEY=fKMqFQH2zWWNWm7b1Ap7
+OWNER=6964148334
 CLEAN_TERMINAL=False
